修改comms.css和header.html，添加footer.html

--- a/header.html
+++ b/header.html
@@ -15,29 +15,25 @@
 <div class="container">
     <div class="float-right my_bg_c">
         <ul class="item d-flex list-unstyled">
-            <li class="link p-2"><a href="#">·ENGLISH</a></li>
-            <li class="link p-2"><a href="#">·日本语</a></li>
-            <li class="link p-2"><a href="#">·한국어</a></li>
-            <li class="link p-2">电话【深圳】0755-86908888 【武汉】027-65500888 、027-65500999 <li>
-            <li class="link p-2">分享到</li>
-            <li class="link p-2"><a href="#">微博</a><li>
-            <li class="link p-2"><a href="#">微信</a></li>
+            <li class="link px-2"><a href="#">·ENGLISH</a></li>
+            <li class="link px-2"><a href="#">·日本语</a></li>
+            <li class="link px-2"><a href="#">·한국어</a></li>
+            <li class="link px-2">电话【深圳】0755-86908888 【武汉】027-65500888 、027-65500999 <li>
+            <li class="link px-2">分享到</li>
+            <li class="link px-2"><a href="#">微博</a><li>
+            <li class="link px-2"><a href="#">微信</a></li>
         </ul>
     </div>
     <div class="float-right">
-        <ul class="item d-flex list-unstyled">
-            <li class="link mx-5 px-5 float-left">
-                <a class="pl-5" href="#">
-                    <img src="/img/index/logo.png" alt="">
-                </a>
-            </li>
-            <li class="link px-2 ml-5 mb-0"><a href="#">首页</a></li>
-            <li class="link px-2 mb-0"><a href="#">关于华星</a></li>
-            <li class="link px-2 mb-0"><a href="#">媒体中心</a></li>
-            <li class="link px-2 mb-0"><a href="#">产品与技术</a></li>
-            <li class="link px-2 mb-0"><a href="#">企业责任</a></li>
-            <li class="link px-2 mb-0"><a href="#">加入华星</a></li>
-        </ul>
+    <div class="one"><a href="#" title="华星光电"><img src="img/index/logo.png" alt="华星光电"></a></div>
+    <ul class="item d-flex list-unstyled mt-7">
+        <li class="link px-2"><a href="#" larget="_self"class="selected">首页</a></li>
+        <li class="link px-2"><a href="#" target="_self">关于华星<a></li>
+           <li class="link px-2"><a href="#" target="_self">媒体中心<a></li>
+        <li class="link px-2"><a href="#" target="_self">产品技术<a></li>
+        <li class="link px-2"><a href="#" target="_self">企业责任<a></li>
+        <li class="link px-2"><a href="#">加入华星</a></li>
+    </ul>  
     </div>
 </div>
 </body>
