--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="/css/bootstrap.css">
     <script src="js/jquery.min.js"></script>
     <script src="js/popper.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
@@ -12,6 +13,7 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
+<!-- 引入头部 -->
 <header>
     <iframe class="my_header" src="header.html" frameborder="0" scrolling="no"></iframe>
 </header>
@@ -43,7 +45,65 @@
             <li data-target="#demo" data-slide-to="2"></li>
         </ul>
     </div>
+    <div>
+        <table class="border-0">
+            <tr>
+                <td>核心技术Technology</td>
+                <td class="ml-4">加入华星，无忧生活</td>
+                <td>新闻 News</td>
+            </tr>
+            <tr>
+                <td>
+                    <img src="img/index/20141103144457248.jpg" class="pt-0" alt="">
+                </td>
+                <td>
+                    <img src="img/index/20190403174023146.png" class="img1 pt-0" alt="">
+                </td>
+                <td>
+                    <div>
+                       <hr class="bold">
+                       <a href="#" class="text small">华星光电携数据化门店方案亮相智慧零售数字化转型峰会</a>
+                    </div>
+                    <div class="d-flex">
+                        <img src="img/index/20190531151923733.jpg" class="img2" alt="">
+                        <p class="text small">5月23-24日，Smart Retail 2019 智慧零售数字化转型峰会在上海举办，峰会聚焦零售商和品牌商如何通过数字化革命驱动 ...
+                        </p>
+                </div>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <h5>自主创新引领产业升级</h5>
+                    <p class="text small">在国家战略新兴产业政策的引领下，华星光电积极探索实践产业转型升级道路，通过自组团队、自主开发、自主建设的创新模式，成功地开辟了一条自主创新发展的崭新道路……</p>
+                </td>
+                <td>
+                    <h5>星居计划</h5>
+                    <p class="text small">无利购房贷款，华星助你安家落户 。<br>
+                    为了能让华星人无忧生活，华星专门成立星居基金，每一个华星人都可申请无息贷款，用于员工在深圳、惠州、东莞、武汉购买首套家庭住房的首付，让每位华星人都体面地生活。 </p>
+                </td>
+                <td>
+                    <ul class="list list-unstyled">
+                        <li class="text small">
+                            <a href="#">硬核解锁！SID2019华星光电黑科技来袭 </a>
+                            <p class="time">2019-05-15</p>
+                        </li>
+                        <li class="text small">
+                            <a href="#">华星光电执行最严环保标准，走高质量持续发展路线 </a>
+                            <p class="time">2019-04-23</p>
+                        </li>      
+                    </ul>
+                </td>
+            </tr>
+        </table>
+    </div>
+    <div class="d-flex">
+        <p>快捷链接：</p>&nbsp;&nbsp;&nbsp;&nbsp;
+        <a href="#">加入华星</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        <a href="#">华星科技核心技术</a>
+    </div>
+     <hr>
 </div>
+<!-- 引入尾部 -->
 <footer>
     <iframe class="my_footer" src="footer.html" frameborder="0" scrolling="no"></iframe>
 </footer>
