添加了index2.html和一张照片在img/index目录下，并修改了comm.css,header.html,footer.html和 index.html 其中的样式

--- a/header.html
+++ b/header.html
@@ -24,16 +24,16 @@
             <li class="link px-2"><a href="#">微信</a></li>
         </ul>
     </div>
-    <div class="float-right">
-    <div class="one"><a href="#" title="华星光电"><img src="img/index/logo.png" alt="华星光电"></a></div>
-    <ul class="item d-flex list-unstyled mt-7">
-        <li class="link px-2"><a href="#" larget="_self"class="selected">首页</a></li>
-        <li class="link px-2"><a href="#" target="_self">关于华星<a></li>
-           <li class="link px-2"><a href="#" target="_self">媒体中心<a></li>
-        <li class="link px-2"><a href="#" target="_self">产品技术<a></li>
-        <li class="link px-2"><a href="#" target="_self">企业责任<a></li>
-        <li class="link px-2"><a href="#">加入华星</a></li>
-    </ul>  
+    <div class="float-right my_c">
+        <div class="one"><a href="#" title="华星光电"><img src="img/index/logo.png" alt="华星光电"></a></div>
+        <ul class="item d-flex list-unstyled mt-7">
+            <li class="link px-2 pt-2"><a href="#">首页</a></li>
+            <li class="link px-2 pt-2"><a href="#">关于华星<a></li>
+            <li class="link px-2 pt-2"><a href="#">媒体中心<a></li>
+            <li class="link px-2 pt-2"><a href="#">产品技术<a></li>
+            <li class="link px-2 pt-2"><a href="#">企业责任<a></li>
+            <li class="link px-2 pt-2"><a href="#">加入华星</a></li>
+        </ul>  
     </div>
 </div>
 </body>
