--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                     为了能让华星人无忧生活，华星专门成立星居基金，每一个华星人都可申请无息贷款，用于员工在深圳、惠州、东莞、武汉购买首套家庭住房的首付，让每位华星人都体面地生活。 </p>
                 </td>
                 <td>
-                    <ul class="list list-unstyled">
+                    <ul class="list-unstyled">
                         <li class="text small">
                             <a href="#">硬核解锁！SID2019华星光电黑科技来袭 </a>
                             <p class="time">2019-05-15</p>
@@ -101,7 +101,6 @@
         <a href="#">加入华星</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         <a href="#">华星科技核心技术</a>
     </div>
-     <hr>
 </div>
 <!-- 引入尾部 -->
 <footer>
