--- a/index.html
+++ b/index.html
@@ -17,34 +17,35 @@
 <header>
     <iframe class="my_header" src="header.html" frameborder="0" scrolling="no"></iframe>
 </header>
-<div class="container">
-    <div id="demo" class="carousel" data-ride="carousel">
-        <!-- 1.轮播图片-->
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img class="my_img" src="img/index/20180713155849700.jpg" alt=""/>
-            </div>
-            <div class="carousel-item">
-                <img class="my_img" src="img/index/20180713160142834.jpg" alt=""/>
-            </div>
-            <div class="carousel-item">
-                <img class="my_img" src="img/index/20190409152659680.jpg" alt=""/>
-            </div>
+<!-- <div class="container"> -->
+<div id="demo" class="carousel" data-ride="carousel">
+    <!-- 1.轮播图片-->
+    <div class="carousel-inner">
+        <div class="carousel-item active">
+            <img class="my_img" src="img/index/20180713155849700.jpg" alt=""/>
         </div>
-        <!-- 2.左右箭头-->
-        <a data-slide="prev" href="#demo" class="carousel-control-prev">
-            <span class="carousel-control-prev-icon"></span>
-        </a>
-        <a data-slide="next" href="#demo" class="carousel-control-next">
-            <span class="carousel-control-next-icon"></span>
-        </a>
-        <!-- 3.轮播指示器-->
-        <ul class="carousel-indicators">
-            <li data-target="#demo" data-slide-to="0" class="active"></li>
-            <li data-target="#demo" data-slide-to="1"></li>
-            <li data-target="#demo" data-slide-to="2"></li>
-        </ul>
+        <div class="carousel-item">
+            <img class="my_img" src="img/index/20180713160142834.jpg" alt=""/>
+        </div>
+        <div class="carousel-item">
+            <img class="my_img" src="img/index/20190409152659680.jpg" alt=""/>
+        </div>
     </div>
+    <!-- 2.左右箭头-->
+    <a data-slide="prev" href="#demo" class="carousel-control-prev">
+        <span class="carousel-control-prev-icon"></span>
+    </a>
+    <a data-slide="next" href="#demo" class="carousel-control-next">
+        <span class="carousel-control-next-icon"></span>
+    </a>
+    <!-- 3.轮播指示器-->
+    <ul class="carousel-indicators">
+        <li data-target="#demo" data-slide-to="0" class="active"></li>
+        <li data-target="#demo" data-slide-to="1"></li>
+        <li data-target="#demo" data-slide-to="2"></li>
+    </ul>
+</div>
+<div class="container">
     <div>
         <table class="border-0">
             <tr>
