重新定义了header.html和footer.hml 的布局，在header.html添加了id为top,class为wrap，one等div元素，在footer.html中也添加了class为wrap的元素。并在comms.css中添加了它们的样式

--- a/footer.html
+++ b/footer.html
@@ -12,29 +12,31 @@
     <link rel="stylesheet" href="comms.css">
 </head>
 <body>
-<div class="container">
-    <div id="footer">
-        <hr>
-        <div class="ft-coprigyt">
-            <p>电 话：【深圳】0755-86908888【027-65500888027-65500999  
-            <br>
-            深圳地址： 深圳市光明新区塘明大道9-2号    邮编：518132 
-            <br>
-            武汉地址：武汉市东湖新技术开发区光谷智能制造业园左岭道号 邮430078
-            </p>
-        </div>
-        <div class="ft-nav"> 
-            <a href="#" >首 页</a>|          
-            <a href="#" >关于华星</a>|          	
-            <a href="#" >媒体中心</a>|          	
-            <a href="#" >产品与技术</a>|          	
-            <a href="#">企业责任</a>|          	
-            <a href="#" >加入华星</a>    
-            <br>
-            COPYRIGHT © 2013 CSOT  ALL RIGHT RESERVED   
-            <a href="#">粤ICP备12001030号-1</a>&nbsp;&nbsp;
+<div id="footer">
+    <div class="container">
+        <div class="warp clearfix">
+            <div class="ft-coprigyt">
+                <p>电 话：【深圳】0755-86908888【027-65500888027-65500999  
+                <br>
+                深圳地址： 深圳市光明新区塘明大道9-2号    邮编：518132 
+                <br>
+                武汉地址：武汉市东湖新技术开发区光谷智能制造业园左岭道号 邮430078
+                </p>
+            </div>
+            <div class="ft-nav"> 
+                <a href="#" >首 页</a>|          
+                <a href="#" >关于华星</a>|          	
+                <a href="#" >媒体中心</a>|          	
+                <a href="#" >产品与技术</a>|          	
+                <a href="#">企业责任</a>|          	
+                <a href="#" >加入华星</a>    
+                <br>
+                COPYRIGHT © 2013 CSOT  ALL RIGHT RESERVED   
+                <a href="#">粤ICP备12001030号-1</a>&nbsp;&nbsp;
+            </div>
         </div>
     </div>
-</div> 
+</div>
+<!-- </div> -->
 </body>
 </html>
