--- a/header.html
+++ b/header.html
@@ -12,28 +12,34 @@
     <link rel="stylesheet" href="comms.css">
 </head>
 <body>
-<div class="container">
-    <div class="float-right my_bg_c">
-        <ul class="item d-flex list-unstyled">
+<div class="top">
+    <div class="wrap">
+        <ul class="item d-flex float-right text small">
             <li class="link px-2"><a href="#">·ENGLISH</a></li>
             <li class="link px-2"><a href="#">·日本语</a></li>
             <li class="link px-2"><a href="#">·한국어</a></li>
-            <li class="link px-2">电话【深圳】0755-86908888 【武汉】027-65500888 、027-65500999 <li>
+            <li class="link px-2">电话【深圳】0755-86908888 【武    汉】 027-65500888 、027-65500999<li>
             <li class="link px-2">分享到</li>
             <li class="link px-2"><a href="#">微博</a><li>
             <li class="link px-2"><a href="#">微信</a></li>
         </ul>
     </div>
-    <div class="float-right my_c">
-        <div class="one"><a href="#" title="华星光电"><img src="img/index/logo.png" alt="华星光电"></a></div>
-        <ul class="item d-flex list-unstyled mt-7">
-            <li class="link px-2 pt-2"><a href="#">首页</a></li>
-            <li class="link px-2 pt-2"><a href="#">关于华星<a></li>
-            <li class="link px-2 pt-2"><a href="#">媒体中心<a></li>
-            <li class="link px-2 pt-2"><a href="#">产品技术<a></li>
-            <li class="link px-2 pt-2"><a href="#">企业责任<a></li>
-            <li class="link px-2 pt-2"><a href="#">加入华星</a></li>
-        </ul>  
+</div>
+<div class="header">
+    <div class="container">
+        <div class="wrap">
+            <div class="one">
+                <a href="#" title="华星光电"><img  src="img/index/logo.png" alt="华星光电"></a>
+            </div>
+            <ul class="naver d-flex">
+                <li class="link px-2 pt-2"><a href="#">首页</a></li>
+                <li class="link px-2 pt-2"><a href="#">关于华星<a></li>
+                <li class="link px-2 pt-2"><a href="#">媒体中心<a></li>
+                <li class="link px-2 pt-2"><a href="#">产品技术<a></li>
+                <li class="link px-2 pt-2"><a href="#">企业责任<a></li>
+                <li class="link px-2 pt-2"><a href="#">加入华星</a></li>
+            </ul>  
+        </div>
     </div>
 </div>
 </body>
