添加了details3.html和几张img，修改了details1.html中class为position的div的位置，修改index.css中轮播图中轮播指示器的样式

--- a/details1.html
+++ b/details1.html
@@ -21,7 +21,7 @@
     <img class="mt-0 pt-0" src="img/index/20180713155849700.jpg" alt="">
 </div>
 <div class="container">
-    <div class="postion text small"> 您的位置 -<a href="./">首页</a> - <a href="#">关于华星</a> - 华星简介</div>
+    <div class="postion text small mt-3"> 您的位置 -<a href="./">首页</a> - <a href="#">关于华星</a> - 华星简介</div>
     <hr>
     <div class="row mx=0">
         <div class="col-4 pr-4">
