--- a/details1.html
+++ b/details1.html
@@ -18,7 +18,7 @@
     <iframe class="my_header" src="header.html" frameborder="0" scrolling="no"></iframe>
 </header>
 <div>
-    <img class="mt-0 pt-0" src="img/index/20180713155849700.jpg" alt="">
+    <img class="mt-0 pt-0" src="img/index/top_banner1.jpg" alt="">
 </div>
 <div class="container">
     <div class="postion text small mt-3"> 您的位置 -<a href="./">首页</a> - <a href="#">关于华星</a> - 华星简介</div>
